<resources>
    <string name="app_name">KrishiVyahan</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_section2">KrishiVyahan is a way to connect all the basic required services for a farmer in one place. Uniting the Agri consumer, the seller (Krishi Vyapaar) and transport (Vahan). The seller and consumer need not worry about the crop shipment with the Transport details provided on KrishiVyahan. Besides the crop trade, a farmer gets the facility to get the soil tested, farming insurance details, and an online shop to buy everything for a crop from seeds, fertilizers, pesticides to farm machinery at reasonable rates. Moreover, krishiVyahan keeps you updated with the latest government schemes.</string>
    <string name="home_section3_head">We connect all the farmers, fulfilling all of their needs at one place. Krishi Vyahan, buy, sell or get the produce transported at your place with the best of services. Trade your crops, get the soil tested, get the crops recommended and crop analyzed. Krishi Shop to buy equipments, seeds and all the things to grow a crop.</string>
    <string name="home_section3_subhead1">Crop Trade</string>
    <string name="home_section3_subcontent1">Buy crops from the sellers around you, comparing the best of prices and quality.</string>
    <string name="home_section3_subhead2">Transport Details</string>
    <string name="home_section3_subcontent2">Get your produces, machinery, logistics delivered to the consumers at an ease, in an economically quoted price.</string>
    <string name="home_section3_subhead3">Agro Insurance</string>
    <string name="home_section3_subcontent3">Get all the details to acquire agriculture insurances of the crops and equipments near your place.</string>
    <string name="home_section3_subhead4">Lab Details</string>
    <string name="home_section3_subcontent4">Details of the labs for soil testing near your place.</string>
    <string name="home_section3_subhead5">Crop Recommendation</string>
    <string name="home_section3_subcontent5">Crop Recommendation for precision agriculture is a modern farming technique we used to suggest the farmers the right crop based on their site-specific parameters.</string>
    <string name="home_section3_subhead6">Krishi Shop</string>
    <string name="home_section3_subcontent6">All the farming ingredients at economical prices, from seeds, farming equipment, machinery to pesticides and fertilizers in the Krishi Shop.</string>
    <string name="home_section5_subhead1">FARMERS GUIDE</string>
    <string name="home_section5_subhead2">Kitchen Garden with KrishiVyahan</string>
    <string name="home_section5_content">"Food is a basic requirement for every living being. We depend on plant and animals for food. Ancient men began the cultivation of food in a small area and used certain procedures for their management and improvement. This art of cultivation of the crop is called agriculture.\n\nIn agriculture, there are certain parameters to be considered such as the type of crop, properties of soil, climate etc. Depending upon these parameters, farmers decide which crop is to be cultivated at what time of the year and place. Moreover, to yield a high-quality product, suitable soil, climate and season are not sufficient. It requires a set of procedures which needed to be followed. The measures which are followed to raise crops are called agricultural practices. Different agricultural practices are discussed below. "</string>
    <string name="home_section2_head">ABOUT US</string>
    <string name="aboutUs_section5_content">Agriculture, with its associated sectors, is unquestionably the largest livelihood provider in India, more so in the vast rural areas. It also contributes a significant figure to the Gross Domestic Product (GDP). Sustainable agriculture, in terms of food security, rural employment, and environmentally sustainable technologies such as soil conservation, sustainable natural resource management and biodiversity protection, are essential for holistic rural development. Indian agriculture and allied activities have witnessed a green revolution, a white revolution, a yellow revolution and a blue revolution.\n\nKrishiVyahan is a way to connect all the basic required services for a farmer in one place. Uniting the Agri consumer, the seller (Krishi Vyapaar) and transport (Vahan). The seller and consumer need not worry about the crop shipment with the Transport details provided on KrishiVyahan. Besides the crop trade, a farmer gets the facility to get the soil tested, farming insurance details, and an online shop to buy everything for a crop from seeds, fertilizers, pesticides to farm machinery at reasonable rates. Moreover, krishiVyahan keeps you updated with the latest government schemes.</string>
    <string name="footer_section1_content">Krishi Vyapaar Vahan, avail all the agriculture services in one place, from selling, buying and getting delivered bulk Agri products with KrishiVyahan.</string>
    <string name="recommendation_section2_content">Crop Prediction for precision agriculture is a modern farming technique we used to suggest the farmers the right crop based on their site-specific parameters.</string>
    <string name="Location">Location</string>
    <string name="locationName1">Delhi</string>
    <string name="locationName2">Rohtak</string>
    <string name="locationName3">Haryana</string>
    <string name="locationName4">Gurgaon</string>
    <string name="locationName5">Punjab</string>
    <string name="locationName6">Chandigarh</string>
    <string name="Price">Price</string>
    <string name="price1">Rs 0.00 – Rs 500</string>
    <string name="price2">Rs 500 – Rs 2000</string>
    <string name="price3">Rs 2000 – Rs 5000</string>
    <string name="price4">Rs 5000 +</string>
    <string name="Sort_By">Sort By</string>
    <string name="sort_general1">Availability</string>
    <string name="sort_general2">Price: low to high</string>
    <string name="sort_general3">Price: high to low</string>
    <string name="sort_general4">Alphabetically, A-Z</string>
    <string name="sort_general5">Alphabetically, Z-A</string>
    <string name="sort_appointment1">Morning Appointment</string>
    <string name="sort_appointment2">Evening Appointment</string>
    <string name="sort_appointment3">Latest Appointment</string>
    <string name="tags">Tags</string>
    <string name="lab_detail_section2_content">Details of the labs for soil testing near your place.</string>
    <string name="insurance_section2_content">Agricultural insurance is a policy which involves the insured (farmer) paying a little sum, usually in percentage, to an insurance company (insurer) to guarantee against loss due to any of the perils (death, flood, drought etc) covered for a particular period of time (usually not more than one year) with a promise to indemnify should such occur.</string>
    <string name="categories">Categories</string>
    <string name="transportation_section2_content">Get your produces, machinery, logistics delivered to the consumers at an ease, in an economically quoted price.</string>
    <string name="govtSchemes_section4_content">There are many agricultural reforms took place by government to provide a standard lifestyle to farmers and bring equal socio-economic facilities to them. As India’s agriculture sector remained sort of distress due to natural calamities, failure of monsoon, lack of technology, lack of proper education in terms of farming, which many a times lead to harsh steps taken by farmers in form of life loss. Following are a few Government Reforms for Agriculture Sector:</string>
    <string name="govtSchemes_section4_subcontent1">e-Compendium of Published Articles on Farm Reforms Act 2020.</string>
    <string name="govtSchemes_section4_subcontent2">Standard Operating Procedure (SoP) for release and use of Grants-in-aid to State Governments for Administrative Cost of Project Monitoring Unit (PMU)- reg.</string>
    <string name="govtSchemes_section4_subcontent3">Central Sector Scheme of Financing Facility under Agriculture Infrastructure Fund.</string>
    <string name="govtSchemes_section4_subcontent4">Guidelines of Agriculture Infrastructure Fund in Hindi.</string>
    <string name="govtSchemes_section4_subcontent5">Clarification regarding CHC as eligible project under Agriculture Infrastructure Fund.</string>
    <string name="govtSchemes_section4_subcontent6">Clarification regarding Interest Subvention in Central Sector Scheme for financing under Agriculture Infrastructure Fund.</string>
    <string name="home_section1_content">Krishi Vyapaar Vahan, avail all the agriculture services in one place, from selling, buying and getting delivered bulk Agri products with KrishiVyahan.</string>
    <string name="govt_scheme1">eNAM</string>
    <string name="govt_scheme2">Paramparagat Krishi Vikas Yojana</string>
    <string name="govt_scheme3">PM Kisan Samman Yojana</string>
    <string name="govt_scheme4">Pradhan Mantri Fasal Bima Yojana</string>
    <string name="govt_scheme5">PM Kisan Mandhan Yojana</string>
    <string name="govt_scheme6">Pradhan Mantri Krishi Sinchayee Yojana</string>
    <string name="accepted_crop_list">Rice, Maize, Chickpea, Kidney beans, Pigeon peas, Mothbeans, Mungbean, Blackgram, Lentil, Pomegranate, Banana, Mango, Grapes, Watermelon, Muskmelon, Apple, Orange, Papaya, Coconut, Cotton, Jute, Coffee, Paddy, Brinjal, Tomato, Bitter gourd, Onion, Barley, Gram, Mustard, Oat, Guava, Lemon, Radish, Cucumber, Beans, Green Chillies, Okra, Sugarcane, Tea</string>
    <string name="reupyog_content">ReUpyog is a feature suggesting various methods in which the biodegradable/non-biodegradable waste can be creatively reused or recycled in your farms or your kitchen gardens.</string>
</resources>