<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.LabDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flFirstSection"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/ivGovtSchemeBg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="#6F000000"
                    android:scaleType="centerCrop"
                    android:src="@drawable/govt_scheme_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="LAB DETAILS"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvSecondSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/grey_text"
                android:text="@string/lab_detail_section2_content"/>

            <RelativeLayout
                android:id="@+id/rlThirdSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvLabItems"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="40dp"
                    android:layoutAnimation="@anim/list_animation"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_lab_details" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llFourthSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/Location"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/locationName1"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/locationName2"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/locationName3"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/locationName4"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/locationName5"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/locationName6"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/Sort_By"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_general1"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_appointment1"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_appointment2"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_appointment3"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_general2"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_general3"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_general4"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/sort_general5"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFifthSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/Price"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/price1"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/price2"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/price3"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="@string/price4"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/tags"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="All Product"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="Soil Testing"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="Soil Health Card"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="Agriculture"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/text_color"
                        android:text="Farmers"
                        android:textSize="18sp"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/contact_us" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>